--- a/MVC.csproj
+++ b/MVC.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ModelTests\**" />
     <Compile Remove="Model\**" />
+    <Content Remove="ModelTests\**" />
     <Content Remove="Model\**" />
+    <EmbeddedResource Remove="ModelTests\**" />
     <EmbeddedResource Remove="Model\**" />
+    <None Remove="ModelTests\**" />
     <None Remove="Model\**" />
   </ItemGroup>
 
