--- a/MVC/Dockerfile
+++ b/MVC/Dockerfile
@@ -1,9 +1,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /MVC
 
-COPY . ./
-RUN dotnet restore
-RUN dotnet publish -c Release -o out
+COPY . .
+RUN dotnet restore MVC/MVC.csproj
+RUN dotnet publish MVC/MVC.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /MVC
