--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,17 @@ services:
     build:
       context: .
       dockerfile: MVC/Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - sql-server
+    environment:
+      Server: "sql-server"
   
+  sql-server:
+    image: mcr.microsoft.com/mssql/server
+    environment:
+      SA_PASSWORD: "Password_123#"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
